--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ author:
 # Custom vars
 version:             1.3.0
 
+exclude: ['/tools']
+
 collections:
   developers-en:
     lang: en
@@ -44,9 +46,6 @@ defaults:
       type: developers-zh_CN
     values:
       layout: developers
-
-pages:
-
 
 t:
   en:
