--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,10 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Discourse Documentation
+description:         ''
 url:                 http://lanyon.getpoole.com
 baseurl:             ''
-paginate:            5
-
-# About/contact
-author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
 
 sass:
   style: :compressed
