Update config settings to use kramdown and github flavored markdown. Fixed #26

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,11 @@ resources_path:      '/public/resources'
 sass:
   style: :compressed
 
+markdown: kramdown
+
+kramdown:
+  input: GFM
+
 # Custom vars
 version:             1.3.0
 
