--- a/tools/doc_list.yml
+++ b/tools/doc_list.yml
@@ -48,8 +48,7 @@ sysadmins:
     - https://github.com/discourse/discourse/blob/master/docs/INSTALL.md #github
     - https://github.com/discourse/discourse/blob/master/docs/INSTALL-cloud.md #github
     - https://meta.discourse.org/t/how-to-create-an-administrator-account-after-install/14046
-    - https://meta.discourse.org/t/change-the-domain-name-or-rename-my-discourse/16098
-    - https://meta.discourse.org/t/installing-discourse-on-ubuntu-12-04-and-ec2/4893 # experimental
+    - https://meta.discourse.org/t/change-the-domain-name-or-rename-my-discourse/16098  
   essentials:
     - https://meta.discourse.org/t/change-the-domain-name-or-rename-my-discourse/16098
     - https://meta.discourse.org/t/change-tracking-branch-for-your-discourse-instance/17014
@@ -96,14 +95,14 @@ sysadmins:
     - https://meta.discourse.org/t/adventures-in-haproxy-and-varnish-with-discourse-because-i-hate-myself/27782
     - https://meta.discourse.org/t/how-to-set-up-discourse-on-a-server-with-existing-apache-sites/30013
 developers:
-  # environment:
-    #  - http://blog.discourse.org/2013/04/discourse-as-your-first-rails-app/
+  environment:
     - https://github.com/discourse/discourse/blob/master/docs/DEVELOPMENT-OSX-NATIVE.md #github
     - https://github.com/discourse/discourse/blob/master/docs/DEVELOPER-ADVANCED.md #github
     - https://github.com/discourse/discourse/blob/master/docs/VAGRANT.md #github
     - https://github.com/discourse/discourse/blob/master/docs/TESTING.md #github
     - https://github.com/discourse/discourse/blob/master/docs/TROUBLESHOOTING-prod.md #github
     - https://github.com/discourse/discourse/blob/master/docs/SECURITY.md #github
+    #  - http://blog.discourse.org/2013/04/discourse-as-your-first-rails-app/
     #  - Setting up Docker in Virtualbox for 'production' testing (Source:GitHub - I can't find this! Does it exist?)
   forum-import:
     -
